@@ -166,7 +166,7 @@ class_alloc(VALUE flags, VALUE klass)
     RCLASS_EXT(obj)->subclasses = NULL;
     RCLASS_EXT(obj)->parent_subclasses = NULL;
     RCLASS_EXT(obj)->module_subclasses = NULL;
-    RCLASS_EXT(obj)->class_serial = rb_next_class_serial();
+    RCLASS_SERIAL(obj) = rb_next_class_serial();
 
     RCLASS_REFINED_CLASS(obj) = Qnil;
     RCLASS_EXT(obj)->allocator = 0;
